updated to allow configurable arguments for shell commands, date format in filename and made restoring database the default

--- a/config/app.yml
+++ b/config/app.yml
@@ -1,4 +1,7 @@
 default:
   sfDoctrineMysqlSafeMigratePlugin:
     mysql_dump_path: mysqldump
+    mysql_dump_arguments: -q
     mysql_path: mysql
+    mysql_arguments: ~
+    dump_date_format: u
